# outlier

./: .clinerules  .dockerignore  .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  CHANGELOGS.md  CLAUDE.md  DEVGAPS.md  Dockerfile  EMAIL_VERIFICATION_IMPLEMENTATION.md  GEMINI.md  Makefile  OAUTH_IMPLEMENTATION_SUMMARY.md  QWEN.md  README.md  SECURITY_IMPLEMENTATION.md  TASK_TRACKER.md  bunfig.toml  docker-compose.yml  jest.config.js  package.json
.claude/: settings.local.json
client/: .eslintrc.json  Dockerfile  UI_IMPROVEMENTS.md  next.config.js  package.json  sentry.client.config.js  sentry.server.config.js  tailwind.config.js
coverage/: lcov.info
docs/: DASHBOARD.md  EXPORT_FUNCTIONALITY.md  OAUTH_SECURITY_SETUP.md  SECURITY_SETUP.md  (+6 more)
server-python/: 2FA_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  install_db_adapter.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  setup.py
server-python/migrations/: 002_add_2fa_fields.py
server-python/src/: db.py  index.py  repositories.py
server-python/src/middleware/: __init__.py  auth.py  error_handler.py  rbac.py
server-python/src/models/: analysis.py  export_job.py  user.py
server-python/src/repositories/: export_repository.py
server-python/src/routes/: api_keys.py  auth.py  channels.py  config.py  dashboard.py  exports.py  favorites.py  health.py  outlier.py  queues.py  two_factor.py
server-python/src/services/: auth_service.py  enhanced_export_service.py  export_queue.py  export_service.py  outlier_detection_service.py  two_factor_service.py  youtube_service.py
server-python/src/utils/: crypto_utils.py  logger.py
server-python/src/youtube_outlier_discovery_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server-python/tests/: test_example.py  test_two_factor.py
(+193 files in other folders)
